# Hermes

./: .gitignore  Cargo.toml  Makefile.toml  device.dockerfile  makefile  readme.md
.github/workflows/: ci.yml
cloud_infra/: docker-compose-local.yml
cloud_manager_frontend/: package.json
cloud_manager_frontend/src/: App.tsx
device_operator/: Cargo.toml
device_operator/helm_chart/hermes/: Chart.yaml  values.yaml
device_operator/helm_chart/hermes/templates/: _helpers.tpl  config-map.yaml  deployment.yaml  serviceaccount.yaml
device_operator/scripts/: localRun.sh
device_operator/src/: main.rs
device_operator/src/command_listener/: mod.rs  rabbitmq.rs  websocket.rs  websocket_listener.rs
device_operator/src/commands/: device_info.rs  mod.rs  router.rs
device_operator/src/kubernetes/: mod.rs  pod.rs  util.rs
shared_model/: Cargo.toml
shared_model/src/: device_info.rs  lib.rs
