[package]
name = "operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures-util = "0.3.30"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
shared_model = { path = "../shared_model" }
serde_json = "1.0.115"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.58"
kube = "0.90.0"
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }

[[bin]]
name = "hermes-device"
path = "src/main.rs"
